# layered-file-protocols-std20

./: CMakeLists.txt  README.md
docs/: installation.rst
src/: cfile.cpp  lfp.cpp  memfile.cpp  rp66.cpp  tapeimage.cpp
